--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,12 @@
 ipykernel
 python-dotenv
-pandas
-numpy
-matplotlib
-seaborn
-tabulate
-scikit-learn
-xgboost
-imblearn
-flask
+pandas==2.2.3
+numpy==2.2.4
+matplotlib==3.10.1
+seaborn==0.13.2
+tabulate==0.9.0
+scikit-learn==1.6.1
+xgboost==3.0.0
+imblearn==0.13.0
+flask==3.1.0
+gunicorn==23.0.0
