--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,6 @@ seaborn==0.13.2
 tabulate==0.9.0
 scikit-learn==1.6.1
 xgboost==3.0.0
-imblearn==0.13.0
+imblearn #0.13.0 ver not found on Render
 flask==3.1.0
 gunicorn==23.0.0
